package cms_8120;
option java_package = "com.hikvision.finance.fms.cms.hpp.type";
option java_outer_classname = "CmdProto";
// @命令ID常量定义
enum CMD { 
    
    //中心端DC服务
    //预留-5
    CMD_REQ_SERVER_LOGIN            = 10000;            // 服务器登录请求
    CMD_RSP_SERVER_LOGIN            = 10001;            // 服务器登录请求响应
    CMD_MSG_SERVER_LOGOUT           = 10002;            // 服务器退出消息
    CMD_REQ_SERVER_DATA             = 10003;            // 服务器请求数据
    CMD_RSP_SERVER_DATA             = 10004;            // 请求/删除数据应答
    
    //上传服务-2
	CMD_DT_RECORDS_LIST             = 11000;            // 录像信息集数据--根据录像状态获取录像信息
    CMD_DT_STORAGE_INFO             = 11001;            // 获取存储设备参数
	CMD_MDT_RECORDS_STATUS          = 11002;            // 更新录像状态--标记上传录像状态
    CMD_DT_RECORDS_LIST_EX          = 11003;            // (获取某一时间段已上传的录像记录，然后删除本地电脑上的录像文件)
    
    //校时服务--5
    CMD_WDT_ALARMLOG_INFO           = 12000;             // 写入报警日志信息
    CMD_DT_ALARMLOG                 = 12001;             // 查询报警日志ID--获取报警状态̬
    CMD_MDT_ALARMTIME               = 12002;             // 更新报警最新时间--更新报警日志信息
    CMD_DT_DVRDEVICE_LIST           = 12003;             // DVR设备集数据--获取所有DVR设备信息
    CMD_DT_STORAGEDEVICE_LIST       = 12004;             // 获取所有存储设备数据集--根据设备类型获取存储设备信息
	CMD_MDT_DEVIDE_STATUS           = 12005;             // 更新设备在线状态̬
	CMD_MDT_DEVIDE_SPACE            = 12006;             // 更新设备可用空间
	CMD_MDT_SERVER_STATUS           = 12007;             // 更新服务在线状态
    
    
    //录像守卫服务--7
    CMD_DT_SYSCONFIG_LIST           = 13000;             // 中心系统参数--获取录像守卫服务的工作时间
    CMD_DT_OVERTIMERECORD_LIST      = 13001;             // 查询过期录像信息--获取过期录像信息
    CMD_DT_RECORD_LIST              = 13002;             // 查询录像信息--获取录像信息
    CMD_DT_STORAGEDEVICE_INFO       = 13003;             // 根据设备名称获取存储设备数据--获取存储设备信息
    CMD_DDT_RECORD_INFO             = 13004;             // 删除录像信息--删除录像信息
    CMD_MDT_OVERTIMERECORD          = 13005;             // 标记过期录像记录--
    CMD_DDT_OVERTIMELOG             = 13006;             // 删除过期日志  
    
    
    //以下全部为CS客户端接口
    
    //CS客户端登录
    CMD_DT_CLIENT_LOGIN             = 14000;        	// 客户端登录请求
    
    //CS客户端登出
    CMD_MSG_CLIENT_LOGOUT           = 14002;        	// 客户端退出消息
    
    CMD_REQ_CLIENT_PWD_CHECK        = 14003;        	// 客户端请求获取密码保鲜信息(待定)
    CMD_RSP_CLIENT_PWD_CHECK        = 14004;        	// 客户端密码保鲜信息返回(待定)
    
    //修改登录密码
    CMD_DT_CHANGE_PASSWORD          = 14006;            // 修改登录密码
    
	//组织信息List
	CMD_DT_REGION_LIST				= 15000;			// 获取组织信息
	
	//证件信息List
	CMD_DT_PARAMDICTIONARY_LIST		= 16000;			// 获取证件列表
	
	//产品类型List
	CMD_DT_PRODUCTTYPE_LIST			= 17000;			// 获取产品类型列表
	
	//产品List
	CMD_DT_PRODUCT_LIST				= 17002;			// 获取产品列表
	
	//产品详情
	CMD_DT_PRODUCT_INFO             = 17004;            // 获取单个产品的产品详情
	
	//产品话术
	CMD_DT_PRODUCT_WORD_TEMPLATE    = 17006;            // 获取单个产品的产品话术
	
	//业务单
	CMD_WDT_CLIENT_RECORD		    = 19000;			// 写入业务单信息
	CMD_MDT_CLIENT_RECORD		    = 19001;			// 更新业务单信息
	CMD_DT_CLIENT_RECORD		    = 19002;			// 获取业务单信息
	CMD_DDT_ERROR_RECORD		    = 19003;			// 删除异常录像信息
	CMD_DT_ERROR_RECORD             = 19004;            // 获取异常录像信息
	CMD_MDT_ERROR_RECORD            = 19005;            // 重新上传失败的录像
	CMD_DT_PRINT_RECORD             = 19006;            // 打印业务单信息
	
	//历史业务单
	CMD_DT_HIS_CLIENTINPUT		    = 20000;			// 获取历史业务单信息
	
	//参数列表
	CMD_DT_SYSTEM_CONFIG            = 21000;            // 获取参数配置列表信息
	
	//CS客户端心跳
	CMD_WRITE_WORK_STATE            = 22000;            // 设置心跳
	

}